<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_700"
    tools:context=".NewAssessmentInput">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/add_assessment_task"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1"
            android:padding="30dp"
            tools:ignore="UselessParent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/task"/>

                <EditText
                    android:id="@+id/taskInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:autofillHints=""
                    tools:ignore="LabelFor,TextFields"
                    android:inputType="text" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/subject"/>

                <EditText
                    android:id="@+id/subjectInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:autofillHints=""
                    android:inputType="text"
                    tools:ignore="LabelFor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/date" />

                <EditText
                    android:id="@+id/dateInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:hint="@string/_01_05_2020"
                    android:autofillHints=""
                    android:inputType="text"
                    tools:ignore="TextFields" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/time" />

                <EditText
                    android:id="@+id/timeInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:hint="@string/_23_59"
                    android:autofillHints=""
                    android:inputType="text" />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/saveBtn"
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/save"/>
            </TableRow>
        </TableLayout>



</androidx.appcompat.widget.LinearLayoutCompat>